# code2prompt

./: .code2promptrc  .cursorrules  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.md  README.md  TEMPLATE.md  pyproject.toml  test.tx
.github/workflows/: build.yml
.temp/: hello1.txt  hello2.txt  test.md
code2prompt/: comment_stripper.py  config.py  count_tokens_1.py  create_template_directory.py  file_handling.py  generate_content.py  generate_markdown_content.py  get_gitignore_patterns.py  interactive_command.py  language_inference.py  main.py  print_help.py  process_file.py  process_files.py  should_process_file.py  template_processor.py  version.py  write_output.py
code2prompt/commands/: analyze.py  base_command.py  generate.py  interactive_command.py  interactive_selector.py
code2prompt/comment_stripper/: __init__.py  c_style.py  html_style.py  matlab_style.py  python_style.py  r_style.py  shell_style.py  sql_style.py  strip_comments.py
code2prompt/core/: file_path_retriever.py  generate_content.py  get_file_paths.py  process_file.py  process_files.py  template_processor.py  write_output.py
code2prompt/data/: token_price.json
code2prompt/templates/: analyze-code.j2  create-function.j2  create-readme.j2  default.j2  improve-this-prompt.j2
code2prompt/utils/: add_line_numbers.py  analyzer.py  comment_stripper.py  config.py  create_template_directory.py  display_price_table.py  file_utils.py  generate_markdown_content.py  get_gitignore_patterns.py  include_loader.py  is_binary.py  is_filtered.py  is_ignored.py  language_inference.py  logging_utils.py  output_utils.py  parse_gitignore.py  price_calculator.py  should_process_file.py
docs/: diagram.md
script/: detect_dead_code.sh
templates/: code-review.j2  create-function.j2  create-readme.j2  create_readme.j2  default.j2  improve-this-prompt.j2  improve_code.j2
tests/: normalize_whitespace_1.py  temp_dir.py  test_add_line_numbers.py  test_analyze.py  test_code2prompt.py  test_comment_stripper.py  test_create_markdown_file.py  test_create_markdown_with_exclude_1.py  test_create_markdown_with_filter.py  test_create_template_directory.py  test_directory_is_ignored_no_backslash.py  test_generate_markdown_content.py  test_git_directory_is_ignored.py  test_include_loader.py  test_interactive_file_selector.py  test_is_binary.py  test_is_filtered.py  test_is_ignored.py  test_language_inference.py  test_nested_path_is_ignored.py  test_parse_gitignore.py  test_price.py  test_relative_path_is_ignored.py  test_strip_c_style_comments.py  test_strip_html_style_comments.py  test_strip_matlab_style_comments.py  test_strip_python_style_comments.py  test_strip_r_style_comments.py  test_strip_shell_style_comments.py  test_strip_sql_style_comments.py  test_template_include.py  test_template_processor.py  test_venv_directory_is_ignored.py
todo/: improvements.md
