[tool.poetry]
name = "code2prompt"
version = "0.6.3"
description = ""
authors = ["Raphael MANSUY <raphael.mansuy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
rich = "^13.7.1"
click = "^8.1.7"
jinja2 = "^3.1.4"
prompt-toolkit = "^3.0.47"
tiktoken = "^0.7.0"
pyperclip = "^1.9.0"

[tool.poetry.scripts]
code2prompt = "code2prompt.main:create_markdown_file"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
